[product_galery] Slider card

--- a/online_stores_and_the_like/product_gallery/index.html
+++ b/online_stores_and_the_like/product_gallery/index.html
@@ -10,111 +10,279 @@
         <input type="radio" id="r1" name="g1">
         <input type="radio" id="r2" name="g1">
         <input type="radio" id="r3" name="g1">
+        <div class="scroll_container">
+            <label for="r1">1</label>
+            <label for="r2">2</label>
+            <label for="r3">3</label>
+        </div>
 
         <div class="container_vegetables">
-            <div class="vegetables">
+            <div class="vegetable">
                 <div class="img_container">
                     <img src="img/1586091107168217837.jpg">
                 </div>
 
                 <div class="description">
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
+                    <div class="img_container">
+                        <img src="img/1586091107168217837.jpg">
+                    </div>
+
+                    <div class="desc_text">
+                        Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
+                        Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.
+                        Elitr accommodare deterruisset eam te, vim munere pertinax consetetur at.
+                        Eu eam dolores lobortis percipitur, quo te equidem deleniti disputando. Mandamus abhorreant
+                        deseruisse mea at, mea elit deserunt persequeris at, in putant fuisset honestatis qui. Postulant
+                        assueverit ea his. Nisl omittam complectitur pro an, quem omnes munere id vix.
+                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
+                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
+                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
+                    </div>
                 </div>
             </div>
 
-            <div class="vegetables">
+            <div class="vegetable">
                 <div class="img_container">
                     <img src="img/1586091107168217837.jpg">
                 </div>
 
                 <div class="description">
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
+                    <div class="img_container">
+                        <img src="img/1586091107168217837.jpg">
+                    </div>
+
+                    <div class="desc_text">
+                        Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
+                        Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.
+                        Elitr accommodare deterruisset eam te, vim munere pertinax consetetur at.
+                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
+                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
+                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
+                    </div>
                 </div>
             </div>
 
-            <div class="vegetables">
+            <div class="vegetable">
                 <div class="img_container">
                     <img src="img/1586091107168217837.jpg">
                 </div>
 
                 <div class="description">
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
-                    JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES JustVEGETABLES
+                    <div class="img_container">
+                        <img src="img/1586091107168217837.jpg">
+                    </div>
+
+                    <div class="desc_text">
+                        Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
+                        Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.
+                        Elitr accommodare deterruisset eam te, vim munere pertinax consetetur at.
+                        Eu eam dolores lobortis percipitur, quo te equidem deleniti disputando. Mandamus abhorreant
+                        deseruisse mea at, mea elit deserunt persequeris at, in putant fuisset honestatis qui. Postulant
+                        assueverit ea his. Nisl omittam complectitur pro an, quem omnes munere id vix.
+                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
+                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
+                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
+                        Eu eam dolores lobortis percipitur, quo te equidem deleniti disputando. Mandamus abhorreant
+                        deseruisse mea at, mea elit deserunt persequeris at, in putant fuisset honestatis qui. Postulant
+                        assueverit ea his. Nisl omittam complectitur pro an, quem omnes munere id vix.
+                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
+                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
+                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
+                    </div>
                 </div>
             </div>
 
-            <div class="vegetables">
+            <div class="vegetable">
                 <div class="img_container">
                     <img src="img/1586091107168217837.jpg">
                 </div>
-            </div>
 
-            <div class="vegetables">
-                <div class="img_container">
-                    <img src="img/img.jpg">
+                <div class="description">
+                    <div class="img_container">
+                        <img src="img/1586091107168217837.jpg">
+                    </div>
+
+                    <div class="desc_text">
+                        Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
+                        Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.
+                        Elitr accommodare deterruisset eam te, vim munere pertinax consetetur at.
+                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
+                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
+                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
+                    </div>
                 </div>
             </div>
 
-            <div class="vegetables">
+            <div class="vegetable">
                 <div class="img_container">
                     <img src="img/img.jpg">
                 </div>
-            </div>
 
-            <div class="vegetables">
-                <div class="img_container">
-                    <img src="img/img.jpg">
+                <div class="description">
+                    <div class="img_container">
+                        <img src="img/img.jpg">
+                    </div>
+
+                    <div class="desc_text">
+                        Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
+                        Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.
+                        Elitr accommodare deterruisset eam te, vim munere pertinax consetetur at.
+                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
+                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
+                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
+                    </div>
                 </div>
             </div>
 
-            <div class="vegetables">
+            <div class="vegetable">
                 <div class="img_container">
                     <img src="img/img.jpg">
                 </div>
-            </div>
 
-            <div class="vegetables">
-                <div class="img_container">
-                    <img src="img/img.jpg">
+                <div class="description">
+                    <div class="img_container">
+                        <img src="img/img.jpg">
+                    </div>
+
+                    <div class="desc_text">
+                        Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
+                        Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.
+                        Elitr accommodare deterruisset eam te, vim munere pertinax consetetur at.
+                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
+                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
+                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
+                    </div>
                 </div>
             </div>
 
-            <div class="vegetables">
+            <div class="vegetable">
                 <div class="img_container">
                     <img src="img/img.jpg">
                 </div>
-            </div>
 
-            <div class="vegetables">
-                <div class="img_container">
-                    <img src="img/img.jpg">
+                <div class="description">
+                    <div class="img_container">
+                        <img src="img/img.jpg">
+                    </div>
+
+                    <div class="desc_text">
+                        Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
+                        Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.
+                        Elitr accommodare deterruisset eam te, vim munere pertinax consetetur at.
+                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
+                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
+                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
+                    </div>
                 </div>
             </div>
 
-            <div class="vegetables">
+            <div class="vegetable">
                 <div class="img_container">
                     <img src="img/img.jpg">
+                </div>
+
+                <div class="description">
+                    <div class="img_container">
+                        <img src="img/img.jpg">
+                    </div>
+
+                    <div class="desc_text">
+                        Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
+                        Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.
+                        Elitr accommodare deterruisset eam te, vim munere pertinax consetetur at.
+                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
+                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
+                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
+                    </div>
+                </div>
+            </div>
+
+            <div class="vegetable">
+                <div class="img_container">
+                    <img src="img/img.jpg">
+                </div>
+
+                <div class="description">
+                    <div class="img_container">
+                        <img src="img/img.jpg">
+                    </div>
+
+                    <div class="desc_text">
+                        Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
+                        Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.
+                        Elitr accommodare deterruisset eam te, vim munere pertinax consetetur at.
+                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
+                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
+                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
+                    </div>
+                </div>
+            </div>
+
+            <div class="vegetable">
+                <div class="img_container">
+                    <img src="img/img.jpg">
+                </div>
+
+                <div class="description">
+                    <div class="img_container">
+                        <img src="img/img.jpg">
+                    </div>
+
+                    <div class="desc_text">
+                        Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
+                        Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.
+                        Elitr accommodare deterruisset eam te, vim munere pertinax consetetur at.
+                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
+                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
+                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
+                    </div>
+                </div>
+            </div>
+
+            <div class="vegetable">
+                <div class="img_container">
+                    <img src="img/img.jpg">
+                </div>
+
+                <div class="description">
+                    <div class="img_container">
+                        <img src="img/img.jpg">
+                    </div>
+
+                    <div class="desc_text">
+                        Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
+                        Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.
+                        Elitr accommodare deterruisset eam te, vim munere pertinax consetetur at.
+                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
+                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
+                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
+                    </div>
+                </div>
+            </div>
+
+            <div class="vegetable">
+                <div class="img_container">
+                    <img src="img/img.jpg">
+                </div>
+
+                <div class="description">
+                    <div class="img_container">
+                        <img src="img/img.jpg">
+                    </div>
+
+                    <div class="desc_text">
+                        Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
+                        Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.
+                        Elitr accommodare deterruisset eam te, vim munere pertinax consetetur at.
+                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
+                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
+                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
+                    </div>
                 </div>
             </div>
         </div>
-
     </div>
 
-    <div class="scroll_container">
-        <label for="r1">1</label>
-        <label for="r2">2</label>
-        <label for="r3">3</label>
-    </div>
+
 </body>
 </html>
