[product_galery] Modal window

--- a/online_stores_and_the_like/product_gallery/index.html
+++ b/online_stores_and_the_like/product_gallery/index.html
@@ -5,27 +5,31 @@
     <title>Fucking vegetables</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    <div class="container">
-        <input type="radio" id="r1" name="g1">
-        <input type="radio" id="r2" name="g1">
-        <input type="radio" id="r3" name="g1">
+    <header> Fucking vegetables </header>
+
+    <div class="gallery_container">
         <div class="scroll_container">
             <label for="r1">1</label>
             <label for="r2">2</label>
             <label for="r3">3</label>
         </div>
 
+        <input type="radio" id="r1" name="g1">
+        <input type="radio" id="r2" name="g1">
+        <input type="radio" id="r3" name="g1">
+
         <div class="container_vegetables">
             <div class="vegetable">
                 <div class="img_container">
-                    <img src="img/1586091107168217837.jpg">
+                    <img src="img/1.jpg">
                 </div>
 
                 <div class="description">
-                    <div class="img_container">
-                        <img src="img/1586091107168217837.jpg">
-                    </div>
+                    <label class="img_container" for="1">
+                        <img src="img/1.jpg">
+                    </label>
 
                     <div class="desc_text">
                         Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
@@ -43,34 +47,33 @@
 
             <div class="vegetable">
                 <div class="img_container">
-                    <img src="img/1586091107168217837.jpg">
+                    <img src="img/2.jpg">
                 </div>
 
                 <div class="description">
-                    <div class="img_container">
-                        <img src="img/1586091107168217837.jpg">
-                    </div>
+                    <label class="img_container" for="2">
+                        <img src="img/2.jpg">
+                    </label>
 
                     <div class="desc_text">
                         Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
                         Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.
                         Elitr accommodare deterruisset eam te, vim munere pertinax consetetur at.
-                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
-                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
-                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
+                        Eu eam dolores lobortis percipitur, quo te equidem deleniti disputando.
+
                     </div>
                 </div>
             </div>
 
             <div class="vegetable">
                 <div class="img_container">
-                    <img src="img/1586091107168217837.jpg">
+                    <img src="img/3.jpg">
                 </div>
 
                 <div class="description">
-                    <div class="img_container">
-                        <img src="img/1586091107168217837.jpg">
-                    </div>
+                    <label class="img_container" for="3">
+                        <img src="img/3.jpg">
+                    </label>
 
                     <div class="desc_text">
                         Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
@@ -94,13 +97,13 @@
 
             <div class="vegetable">
                 <div class="img_container">
-                    <img src="img/1586091107168217837.jpg">
+                    <img src="img/4.jpg">
                 </div>
 
                 <div class="description">
-                    <div class="img_container">
-                        <img src="img/1586091107168217837.jpg">
-                    </div>
+                    <label class="img_container" for="4">
+                        <img src="img/4.jpg">
+                    </label>
 
                     <div class="desc_text">
                         Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
@@ -115,13 +118,13 @@
 
             <div class="vegetable">
                 <div class="img_container">
-                    <img src="img/img.jpg">
+                    <img src="img/1.jpg">
                 </div>
 
                 <div class="description">
-                    <div class="img_container">
-                        <img src="img/img.jpg">
-                    </div>
+                    <label class="img_container" for="5">
+                        <img src="img/1.jpg">
+                    </label>
 
                     <div class="desc_text">
                         Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
@@ -136,13 +139,13 @@
 
             <div class="vegetable">
                 <div class="img_container">
-                    <img src="img/img.jpg">
+                    <img src="img/2.jpg">
                 </div>
 
                 <div class="description">
-                    <div class="img_container">
-                        <img src="img/img.jpg">
-                    </div>
+                    <label class="img_container" for="6">
+                        <img src="img/2.jpg">
+                    </label>
 
                     <div class="desc_text">
                         Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
@@ -157,13 +160,13 @@
 
             <div class="vegetable">
                 <div class="img_container">
-                    <img src="img/img.jpg">
+                    <img src="img/3.jpg">
                 </div>
 
                 <div class="description">
-                    <div class="img_container">
-                        <img src="img/img.jpg">
-                    </div>
+                    <label class="img_container" for="7">
+                        <img src="img/3.jpg">
+                    </label>
 
                     <div class="desc_text">
                         Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
@@ -178,13 +181,13 @@
 
             <div class="vegetable">
                 <div class="img_container">
-                    <img src="img/img.jpg">
+                    <img src="img/4.jpg">
                 </div>
 
                 <div class="description">
-                    <div class="img_container">
-                        <img src="img/img.jpg">
-                    </div>
+                    <label class="img_container" for="8">
+                        <img src="img/4.jpg">
+                    </label>
 
                     <div class="desc_text">
                         Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
@@ -199,13 +202,13 @@
 
             <div class="vegetable">
                 <div class="img_container">
-                    <img src="img/img.jpg">
+                    <img src="img/1.jpg">
                 </div>
 
                 <div class="description">
-                    <div class="img_container">
-                        <img src="img/img.jpg">
-                    </div>
+                    <label class="img_container" for="9">
+                        <img src="img/1.jpg">
+                    </label>
 
                     <div class="desc_text">
                         Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
@@ -220,13 +223,13 @@
 
             <div class="vegetable">
                 <div class="img_container">
-                    <img src="img/img.jpg">
+                    <img src="img/2.jpg">
                 </div>
 
                 <div class="description">
-                    <div class="img_container">
-                        <img src="img/img.jpg">
-                    </div>
+                    <label class="img_container" for="11">
+                        <img src="img/2.jpg">
+                    </label>
 
                     <div class="desc_text">
                         Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
@@ -241,34 +244,13 @@
 
             <div class="vegetable">
                 <div class="img_container">
-                    <img src="img/img.jpg">
+                    <img src="img/3.jpg">
                 </div>
 
                 <div class="description">
-                    <div class="img_container">
-                        <img src="img/img.jpg">
-                    </div>
-
-                    <div class="desc_text">
-                        Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
-                        Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.
-                        Elitr accommodare deterruisset eam te, vim munere pertinax consetetur at.
-                        Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Ius dicat feugiat no,
-                        vix cu modo dicat principes. Odio contentiones sed cu, usu commodo prompta prodesset id.
-                        Vivendum dignissim conceptam pri ut, ei vel partem audiam sapientem.
-                    </div>
-                </div>
-            </div>
-
-            <div class="vegetable">
-                <div class="img_container">
-                    <img src="img/img.jpg">
-                </div>
-
-                <div class="description">
-                    <div class="img_container">
-                        <img src="img/img.jpg">
-                    </div>
+                    <label class="img_container" for="12">
+                        <img src="img/3.jpg">
+                    </label>
 
                     <div class="desc_text">
                         Tation delenit percipitur at vix. Nec labore cetero theophrastus no, ei vero facer veritus nec.
@@ -281,8 +263,67 @@
                 </div>
             </div>
         </div>
+
+        <input type="checkbox" id="1">
+        <div class="img_container">
+            <img src="img/1.jpg">
+        </div>
+
+        <input type="checkbox" id="2">
+        <div class="img_container">
+            <img src="img/2.jpg">
+        </div>
+
+        <input type="checkbox" id="3">
+        <div class="img_container">
+            <img src="img/3.jpg">
+        </div>
+
+        <input type="checkbox" id="4">
+        <div class="img_container">
+            <img src="img/4.jpg">
+        </div>
+
+        <input type="checkbox" id="5">
+        <div class="img_container">
+            <img src="img/1.jpg">
+        </div>
+
+        <input type="checkbox" id="6">
+        <div class="img_container">
+            <img src="img/2.jpg">
+        </div>
+
+        <input type="checkbox" id="7">
+        <div class="img_container">
+            <img src="img/3.jpg">
+        </div>
+
+        <input type="checkbox" id="8">
+        <div class="img_container">
+            <img src="img/4.jpg">
+        </div>
+
+        <input type="checkbox" id="9">
+        <div class="img_container">
+            <img src="img/1.jpg">
+        </div>
+
+        <input type="checkbox" id="10">
+        <div class="img_container">
+            <img src="img/2.jpg">
+        </div>
+
+        <input type="checkbox" id="11">
+        <div class="img_container">
+            <img src="img/3.jpg">
+        </div>
+
+        <input type="checkbox" id="12">
+        <div class="img_container">
+            <img src="img/4.jpg">
+        </div>
+
     </div>
-
-
 </body>
 </html>
