[product_galery] fix Display images [murrket_showcase] Arrange cat cards by template

--- a/online_stores_and_the_like/product_gallery/index.html
+++ b/online_stores_and_the_like/product_gallery/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fucking vegetables</title>
+    <title>Just vegetables</title>
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <header> Fucking vegetables </header>
+    <header> Just vegetables </header>
 
     <div class="gallery_container">
         <div class="scroll_container">
