[murrket_showcase] Add sorting by cat breeds

--- a/online_stores_and_the_like/murrket_showcase/index.html
+++ b/online_stores_and_the_like/murrket_showcase/index.html
@@ -2,19 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FCATS</title>
+    <title> FCATS </title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header> Fucking cats </header>
 
     <div class="content">
-        <div class="breed_cats"></div>
+        <div class="breed_cats">
+            <label for="Crazy"> Crazy </label>
+            <label for="Mysterious"> Mysterious </label>
+            <label for="Angry"> Angry </label>
+            <label for="Stupid"> Stupid </label>
+        </div>
+
+        <input type="radio" id="Crazy" name="r1">
+        <input type="radio" id="Mysterious" name="r1">
+        <input type="radio" id="Angry" name="r1">
+        <input type="radio" id="Stupid" name="r1">
 
         <div class="cards_cats">
-            <div class="card_cat">
+            <div class="card_cat Stupid">
                 <div class="img_container">
-                    <img src="img/2m4TEtpqDFc.jpg" alt="1">
+                    <img src="img/Mozhno-ne-nado.jpg" alt="1">
                 </div>
 
                 <div class="description_wrapper">
@@ -23,7 +33,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card_cat">
+            <div class="card_cat Mysterious">
                 <div class="img_container">
                     <img src="img/a5c5512c7b2120977e02ac3de94a6931.jpg" alt="2">
                 </div>
@@ -34,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card_cat">
+            <div class="card_cat Crazy">
                 <div class="img_container">
                     <img src="img/e2bc95fe79b0853ccdd0f186da4d129f.jpg" alt="3">
                 </div>
@@ -45,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card_cat">
+            <div class="card_cat Angry">
                 <div class="img_container">
                     <img src="img/gdtCqYf5XPU.jpg" alt="4">
                 </div>
@@ -56,7 +66,8 @@
                     </div>
                 </div>
             </div>
-            <div class="card_cat">
+
+            <div class="card_cat Stupid">
                 <div class="img_container">
                     <img src="img/images.png" alt="5">
                 </div>
@@ -67,7 +78,8 @@
                     </div>
                 </div>
             </div>
-            <div class="card_cat">
+
+            <div class="card_cat Stupid">
                 <div class="img_container">
                     <img src="img/original-22513-1544075964-15.jpg" alt="6">
                 </div>
@@ -78,9 +90,22 @@
                     </div>
                 </div>
             </div>
-            <div class="card_cat">
+
+            <div class="card_cat Crazy">
                 <div class="img_container">
                     <img src="img/Screenshot_4.png" alt="7">
+                </div>
+
+                <div class="description_wrapper">
+                    <div class="desc">
+                        FCAT 7
+                    </div>
+                </div>
+            </div>
+
+            <div class="card_cat Mysterious">
+                <div class="img_container">
+                    <img src="img/2m4TEtpqDFc.jpg" alt="8">
                 </div>
 
                 <div class="description_wrapper">
